--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             recognizing contour lines on topographic map <br><br>
             recreating topographic map in 2D
         </li>
-        <h3>note: Horizontal scale: distance between 2 contours, Vertical scale: from map scale</h3>
+        <h3>note:<br> Horizontal scale: distance between 2 contours<br> Vertical scale: from map scale<br>Contour interval: space between 2 contours</h3>
         
     </ul>
 </body>
