--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
             recreating topographic map in 2D
         </li>
         <h3>note:<br> Horizontal scale: distance between 2 contours<br> Vertical scale: from map scale<br>Contour interval: space between 2 contours</h3>
+        <h1>LAB 5:</h1>
+        <li>
+            Differentiate between P-S Waves <br><br>
+Know the Seismograph / Seismogram<br><br>
+Know how to calculate Epicentral distance / origin time<br><br>
+Drawing of waves + (hours/minutes)<br><br>
+Determining+ drawing of Epicentre<br><br>
+Abbreviations of Earthquakes (types)<br><br>
+Locate place/name/type of earthquake
+        </li>
         
     </ul>
 </body>
