--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h3>note:<br> Horizontal scale: distance between 2 contours<br> Vertical scale: from map scale<br>Contour interval: space between 2 contours</h3>
         <h1>LAB 5:</h1>
         <li>
+            <h2>Earthquakes<br></h2>
             Differentiate between P-S Waves <br><br>
 Know the Seismograph / Seismogram<br><br>
 Know how to calculate Epicentral distance / origin time<br><br>
