--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@ Determining+ drawing of Epicentre<br><br>
 Abbreviations of Earthquakes (types)<br><br>
 Locate place/name/type of earthquake
         </li>
+        <h1>LAB 6/7/8</h1>
+        <li>
+            <h2>Minerals<br></h2>
+            Determining rocks names/types<br><br>
+applying hardness scale<br><br>
+Applying chemical reactions (HCL)<br><br>
+Knowing properties of each rock<br><br>
+Determining the unknown rocks<br><br>
+        </li>
         
     </ul>
 </body>
