--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Locate place/name/type of earthquake
         </li>
         <h1>LAB 6/7/8</h1>
         <li>
-            <h2>Minerals<br></h2>
+            <h2>Minerals, Sedimentary & Igneous rocks<br></h2>
             Determining rocks names/types<br><br>
 applying hardness scale<br><br>
 Applying chemical reactions (HCL)<br><br>
