--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
             recreating topographic map in 2D
         </li>
         <h3>note:<br> Horizontal scale: distance between 2 contours<br> Vertical scale: from map scale<br>Contour interval: space between 2 contours</h3>
+        <h1>LAB 3:</h1>
+        <li>
+            <h2>Geological Maps<br></h2>
+            Knowing about horizontal beds<br><br>
+Examining topographic maps<br><br>
+Completing / knowing boundaries<br><br>
+Drawing topographic profile<br><br>
+Drawing stratigraphic maps<br><br>
+        </li>
         <h1>LAB 5:</h1>
         <li>
             <h2>Earthquakes<br></h2>
